Patched a bug where favicon not showing, added readme

--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,16 @@ h1.headline {
 
 img.github {
   border-radius: 100%;
-  width: 80;
-  height: 40;
+  max-width: 80;
+  max-height: 40;
 }
 
 .portrait {
+  width: 100%;
+  height: 100%;
   border-radius: 100%;
-  width: 300;
-  height: 300;
+  max-width: 300px;
+  max-height: 300px;
 }
 
 img:hover {
